- remplacement des span.qc-code par <code>

--- a/public/index.html
+++ b/public/index.html
@@ -39,42 +39,42 @@
             <div class="color-sample qc-bg-color-blue-pale"></div>
             <div class="color-description">
                 <strong>Bleu pâle</strong><br/>
-                <span class="qc-code" >--qc-color-blue-pale</span>
+                <code>--qc-color-blue-pale</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-blue-light"></div>
             <div class="color-description">
                 <strong>Bleu clair</strong><br/>
-                <span class="qc-code" >--qc-color-blue-light</span>
+                <code>--qc-color-blue-light</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-blue-regular"></div>
             <div class="color-description">
                 <strong>Bleu</strong><br/>
-                <span class="qc-code" >--qc-color-blue-regular</span>
+                <code>--qc-color-blue-regular</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-blue-piv"></div>
             <div class="color-description">
                 <strong>Bleu piv</strong><br/>
-                <span class="qc-code" >--qc-color-blue-piv</span>
+                <code  >--qc-color-blue-piv</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-blue-medium"></div>
             <div class="color-description">
                 <strong>Bleu moyen</strong><br/>
-                <span class="qc-code" >--qc-color-blue-medium</span>
+                <code  >--qc-color-blue-medium</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-blue-dark"></div>
             <div class="color-description">
                 <strong>Bleu foncé</strong><br/>
-                <span class="qc-code" >--qc-color-blue-dark, --qc-color-text-primary</span>
+                <code  >--qc-color-blue-dark, --qc-color-text-primary</code>
             </div>
         </div>
 
@@ -83,7 +83,7 @@
             <div class="color-sample qc-bg-color-accent"></div>
             <div class="color-description">
                 <strong>Rose</strong><br/>
-                <span class="qc-code" >--qc-color-accent</span>
+                <code  >--qc-color-accent</code>
             </div>
         </div>
 
@@ -92,35 +92,35 @@
             <div class="color-sample qc-bg-color-grey-pale"></div>
             <div class="color-description">
                 <strong>Gris pâle</strong><br/>
-                <span class="qc-code" >--qc-color-grey-pale</span>
+                <code  >--qc-color-grey-pale</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-grey-light"></div>
             <div class="color-description">
                 <strong>Gris clair</strong><br/>
-                <span class="qc-code" >--qc-color-grey-light</span>
+                <code  >--qc-color-grey-light</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-grey-regular"></div>
             <div class="color-description">
                 <strong>Gris</strong><br/>
-                <span class="qc-code" >--qc-color-grey-regular</span>
+                <code  >--qc-color-grey-regular</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-grey-medium"></div>
             <div class="color-description">
                 <strong>Gris moyen</strong><br/>
-                <span class="qc-code" >--qc-color-grey-medium</span>
+                <code  >--qc-color-grey-medium</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-green-dark"></div>
             <div class="color-description">
                 <strong>Gris foncé</strong><br/>
-                <span class="qc-code" >--qc-color-green-dark</span>
+                <code  >--qc-color-green-dark</code>
             </div>
         </div>
 
@@ -130,28 +130,28 @@
             <div class="color-sample qc-bg-color-pink-pale"></div>
             <div class="color-description">
                 <strong>Rose pâle</strong><br/>
-                <span class="qc-code" >--qc-color-pink-pale</span>
+                <code  >--qc-color-pink-pale</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-pink-regular"></div>
             <div class="color-description">
                 <strong>Rose</strong><br/>
-                <span class="qc-code" >--qc-color-pink-regular</span>
+                <code  >--qc-color-pink-regular</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-red-regular"></div>
             <div class="color-description">
                 <strong>Rouge</strong><br/>
-                <span class="qc-code" >--qc-color-red-regular, --qc-color-error</span>
+                <code  >--qc-color-red-regular, --qc-color-error</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-red-dark"></div>
             <div class="color-description">
                 <strong>Rouge foncé</strong><br/>
-                <span class="qc-code" >--qc-color-red-dark, --qc-color-danger</span>
+                <code  >--qc-color-red-dark, --qc-color-danger</code>
             </div>
         </div>
         <h4>Verts</h4>
@@ -159,21 +159,21 @@
             <div class="color-sample qc-bg-color-green-pale"></div>
             <div class="color-description">
                 <strong>Vert pâle</strong><br/>
-                <span class="qc-code" >--qc-color-green-pale</span>
+                <code  >--qc-color-green-pale</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-green-regular"></div>
             <div class="color-description">
                 <strong>Vert</strong><br/>
-                <span class="qc-code" >--qc-color-green-regular, --qc-color-success</span>
+                <code  >--qc-color-green-regular, --qc-color-success</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-green-dark"></div>
             <div class="color-description">
                 <strong>Vert foncé</strong><br/>
-                <span class="qc-code" >--qc-color-green-dark</span>
+                <code  >--qc-color-green-dark</code>
             </div>
         </div>
         <h4>Jaunes</h4>
@@ -181,21 +181,21 @@
             <div class="color-sample qc-bg-color-yellow-pale"></div>
             <div class="color-description">
                 <strong>Jaune pâle</strong><br/>
-                <span class="qc-code" >--qc-color-yellow-pale</span>
+                <code  >--qc-color-yellow-pale</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-yellow-regular"></div>
             <div class="color-description">
                 <strong>Jaune</strong><br/>
-                <span class="qc-code" >--qc-color-yellow-regular</span>
+                <code  >--qc-color-yellow-regular</code>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-color-yellow-dark"></div>
             <div class="color-description">
                 <strong>Jaune foncé</strong><br/>
-                <span class="qc-code" >--qc-color-yellow-dark</span>
+                <code  >--qc-color-yellow-dark</code>
             </div>
         </div>
         <h4>Violet</h4>
@@ -203,7 +203,7 @@
             <div class="color-sample qc-bg-color-purple"></div>
             <div class="color-description">
                 <strong>Violet</strong><br/>
-                <span class="qc-code" >--qc-color-purple, --qc-color-link-visited</span>
+                <code  >--qc-color-purple, --qc-color-link-visited</code>
             </div>
         </div>
 
@@ -215,33 +215,33 @@
                 <p class="qc-h1">Titre de niveau 1</p>
                 <p>
                     <strong>Taille de police/interlignage pour les h1</strong><br/>
-                    <span class="qc-code" >--qc-font-size-h1, --qc-line-height-h1</span>
+                    <code  >--qc-font-size-h1, --qc-line-height-h1</code>
                 </p>
                 <p class="qc-h2">Titre de niveau 2</p>
                 <p>
                     <strong>Taille de police/interlignage pour les h2</strong><br/>
-                    <span class="qc-code" >--qc-font-size-h2, --qc-line-height-h2</span>
+                    <code  >--qc-font-size-h2, --qc-line-height-h2</code>
                 </p>
                 <p class="qc-h3">Titre de niveau 3</p>
                 <p>
                     <strong>Taille de police/interlignage pour les h3</strong><br/>
-                    <span class="qc-code" >--qc-font-size-h3, --qc-line-height-h3</span>
+                    <code  >--qc-font-size-h3, --qc-line-height-h3</code>
                 </p>
 
                 <p class="qc-h4">Titre de niveau 4</p>
                 <p>
                     <strong>Taille de police/interlignage pour les h4</strong><br/>
-                    <span class="qc-code" >--qc-font-size-h4, --qc-line-height-h4</span>
+                    <code  >--qc-font-size-h4, --qc-line-height-h4</code>
                 </p>
                 <p class="qc-h5">Titre de niveau 5</p>
                 <p>
                     <strong>Taille de police/interlignage pour les h5</strong><br/>
-                    <span class="qc-code" >--qc-font-size-h5, --qc-line-height-h5</span>
+                    <code  >--qc-font-size-h5, --qc-line-height-h5</code>
                 </p>
                 <p class="qc-h6">Titre de niveau 6</p>
                 <p>
                     <strong>Taille de police/interlignage pour les h6</strong><br/>
-                    <span class="qc-code" >--qc-font-size-h6, --qc-line-height-h6</span>
+                    <code  >--qc-font-size-h6, --qc-line-height-h6</code>
                 </p>
 
             </figure>
@@ -268,11 +268,11 @@
             ultrices nibh. Nullam hendrerit dictum gravida. Aliquam vel arcu in odio dapibus malesuada.</p>
         <p>
             <strong>Taille de police/interlignage</strong><br/>
-            <span class="qc-code" >--qc-content-font-size-100, --qc-content-line-height-100</span>
+            <code  >--qc-content-font-size-100, --qc-content-line-height-100</code>
         </p>
         <p>
             <strong>Marge basse</strong><br/>
-            <span class="qc-code" >--qc-spacer-md</span>
+            <code  >--qc-spacer-md</code>
         </p>
 
         <h2 id="polices">Polices de caractères</h2>
@@ -282,7 +282,7 @@
             <p>abcdefghijklmnopqrstuvwxyz0123456789</p>
             <p>
                 <strong>Police</strong><br/>
-                <span class="qc-code" >--qc-header-font-family</span>
+                <code  >--qc-header-font-family</code>
             </p>
         </div>
         <div>
@@ -291,18 +291,18 @@
             <p>abcdefghijklmnopqrstuvwxyz0123456789</p>
             <p>
                 <strong>Police</strong><br/>
-                <span class="qc-code" >--qc-content-font-family</span>
+                <code  >--qc-content-font-family</code>
             </p>
         </div>
         <div >
             <h3><strong>Roboto Mono</strong></h3>
-            <div class="qc-code">
+            <code >
                 <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</p>
                 <p>abcdefghijklmnopqrstuvwxyz0123456789</p>
-            </div>
+            </code>
             <p>
                 <strong>Police</strong><br/>
-                <span class="qc-code" >--qc-code-font-family</span>
+                <code  >--qc-code-font-family</code>
             </p>
         </div>
 
@@ -423,14 +423,14 @@
         </div>
         <p>
             <strong>Points de rupture</strong><br/>
-            <span class="qc-code">--qc-breakpoint-sm<br>
+            <code >--qc-breakpoint-sm<br>
                 --qc-breakpoint-md<br>
                 --qc-breakpoint-lg
-            </span>
+            </code>
         </p>
         <p>
             <strong>Gouttière</strong><br/>
-            <span class="qc-code">--qc-breakpoint-gutter</span>
+            <code >--qc-breakpoint-gutter</code>
         </p>
 
         <h2 id="liens">Liens</h2>
@@ -441,7 +441,7 @@
         </p>
         <p>
             <strong>Couleur</strong><br/>
-            <span class="qc-code">--qc-link-text</span>
+            <code >--qc-link-text</code>
         </p>
         <h3>Survol, focus</h3>
         <p>
@@ -449,7 +449,7 @@
         </p>
         <p>
             <strong>Couleur</strong><br/>
-            <span class="qc-code">--qc-link-hover</span>
+            <code >--qc-link-hover</code>
         </p>
         <h3>Lien actif</h3>
         <p>
@@ -457,7 +457,7 @@
         </p>
         <p>
             <strong>Couleur</strong><br/>
-            <span class="qc-code">--qc-link-active</span>
+            <code >--qc-link-active</code>
         </p>
         <h3>Lien externe</h3>
         <p>
@@ -470,7 +470,7 @@
         </p>
         <p>
             <strong>Couleur</strong><br/>
-            <span class="qc-code">--qc-link-visited</span>
+            <code >--qc-link-visited</code>
         </p>
         <h2 id="ombrages">Ombrages</h2>
 
@@ -479,7 +479,7 @@
         <p class="qc-shading-0 square-box">Élévation 0</p>
         <p>
             <strong>Ombre</strong><br/>
-            <span class="qc-code">--qc-box-shadow-0</span>
+            <code >--qc-box-shadow-0</code>
         </p>
 
         <h3>Élévation 1</h3>
@@ -487,14 +487,14 @@
         <p class="qc-shading-1 square-box">Élévation 1</p>
         <p>
             <strong>Ombre</strong><br/>
-            <span class="qc-code">--qc-box-shadow-1</span>
+            <code >--qc-box-shadow-1</code>
         </p>
         <h3>Élévation 2</h3>
         <p>Usage : infobulle</p>
         <p class="qc-shading-2 square-box">Élévation 2</p>
         <p>
             <strong>Ombre</strong><br/>
-            <span class="qc-code">--qc-box-shadow-2</span>
+            <code >--qc-box-shadow-2</code>
         </p>
 
         <h3>Élévation 3</h3>
@@ -502,7 +502,7 @@
         <p class="qc-shading-3 square-box">Élévation 3</p>
         <p>
             <strong>Ombre</strong><br/>
-            <span class="qc-code">--qc-box-shadow-3</span>
+            <code >--qc-box-shadow-3</code>
         </p>
 
         <h3>Élévation 4</h3>
@@ -510,7 +510,7 @@
         <p class="qc-shading-4 square-box">Élévation 4</p>
         <p>
             <strong>Ombre</strong><br/>
-            <span class="qc-code">--qc-box-shadow-4</span>
+            <code >--qc-box-shadow-4</code>
         </p>
         <!-- Citations -->
         <!--<h2 id="citations">Citations</h2>
