Retrait d'une classe inutile dans l'index

--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
         <!-- titles -->
         <h2 id="titre">Titres</h2>
         <div class="qc-gallery title-samples">
-            <figure class="qc-figure">
+            <figure>
                 <p class="qc-h1">Titre de niveau 1</p>
                 <p>
                     <strong>Taille de police/interlignage pour les h1</strong><br/>
@@ -246,7 +246,7 @@
 
             </figure>
 
-            <figure class="qc-image">
+            <figure>
                 <span class="qc-subhead ">Surtitre</span>
                 <p class="qc-h1">Titre de niveau 1 avec surtitre</p>
             </figure>
