#19 - ajout d'une gouttière adaptative

--- a/public/index.html
+++ b/public/index.html
@@ -321,7 +321,7 @@
 
         <!-- grid -->
 
-        <h2 id="grille">Grille horizontale avec gouttière de 32px</h2>
+        <h2 id="grille">Grille horizontale avec gouttière adaptative</h2>
         <div id="grid-samples">
             <div id="background">
                 <div class="qc-row">
