Préfixer classes icônes + Ajustement qc-notice qui en découle

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
                     <li><a href='#ombrages'>Ombrages</a></li>
                     <!--<li><a href='#citations'>Citations</a></li>-->
                     <li><a href='#images'>Images</a></li>
+                    <li><a href='#notice'>Composant "Avis"</a></li>
                 </ul>
             </div>
         </div>
